# ccw-claude-api-lab

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: pipeline.py  schemas.py  stats.py  uploads.py
backend/app/prompts/: catalog_steward.md  clinical_reviewer.md  contract_reviewer.md  credit_analyst.md
backend/app/schemas/: canonical_contract_v1.json  canonical_loan_application_v1.json  canonical_pa_request_v1.json  canonical_product_v1.json  catalog_rules.json  clause_patterns.json  criteria_rules.json  payer_policies_v1.json  risk_rules.json  taxonomy_v1.json  validation_rules.json
backend/app/services/: agent_runner.py  pipeline_store.py  tool_executor.py
backend/app/tools/: __init__.py  _common.py  assess_creditworthiness.py  check_payer_policy.py  compute_credit_ratios.py  evaluate_clause_risk.py  extract_clauses.py  generate_import_report.py  generate_review_memo.py  map_to_canonical_taxonomy.py  parse_contract_pdf.py  parse_loan_package.py  parse_pa_request.py  parse_supplier_feed.py  recommend_decision.py  registry.py  validate_clinical_criteria.py  validate_loan_application.py  validate_skus.py
backend/tests/: conftest.py  test_agent_runner.py  test_catalog_tools.py  test_common.py  test_legal_tools.py  test_loan_tools.py  test_pa_tools.py  test_pipeline_routes.py  test_pipeline_store.py  test_tool_executor.py  test_upload_routes.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: assessment.spec.ts  dashboard.spec.ts  helpers.ts  navigation.spec.ts  pipeline.spec.ts  upload.spec.ts
frontend/public/: manual.html
frontend/src/: App.tsx
sample-data/: acme_saas_msa.txt  vendorco_msa.txt
sample-data/acme_widgets/: financials.csv  profile.json
sample-data/bravo_logistics/: financials.csv  profile.json
sample-data/charlie_retail/: financials.csv  profile.json
sample-data/globalmart_feed/: feed.csv  supplier_meta.json
sample-data/incomplete_request/: request.json
sample-data/knee_arthroscopy/: clinical_notes.txt  request.json
sample-data/lumbar_mri/: clinical_notes.txt  request.json
sample-data/northwind_feed/: feed.csv  supplier_meta.json
(+38 files in other folders)
