[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccw-claude-api-lab-backend"
version = "0.1.0"
description = "Claude API Lab — Prior Authorization Review Agent (workshop backend)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "sse-starlette>=2.0",
    "anthropic>=0.43",
    "pandas>=2.1",
    "openpyxl>=3.1",
    "python-multipart>=0.0.18",
    "rapidfuzz>=3.6",
    "pyarrow>=15.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring external services (Anthropic API)",
]
